--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     }
   </style>
 
-
-
     <ul id="categories">
         <li class="item">
           <h2>Animals</h2>
@@ -69,7 +67,9 @@
     <p>Background color: <span class="color">-</span></p>
     <button type="button" class="change-color">Change color</button>
   </div>
+
   
+  <!--  -->
   <div id="controls">
     <input type="number" min="1" max="100" step="1" />
     <button type="button" data-create>Create</button>
@@ -79,13 +79,13 @@
   <div id="boxes"></div>
   
 
-
-    <script type="module" src="./js/task-1.js" defer></script>
-    <script type="module" src="./js/task-2.js" defer></script>
-    <script type="module" src="./js/task-3.js" defer></script>
-    <script type="module" src="./js/task-4.js" defer></script>
-    <script type="module" src="./js/task-5.js" defer></script>
-    <script type="module" src="./js/task-6.js" defer></script>
+<!--  -->
+    <script type="module" src="/js/task-1.js" defer></script>
+    <script type="module" src="/js/task-2.js" defer></script>
+    <script type="module" src="/js/task-3.js" defer></script>
+    <script type="module" src="/js/task-4.js" defer></script>
+    <script type="module" src="/js/task-5.js" defer></script>
+    <script type="module" src="/js/task-6.js" defer></script>
   </head>
   <body>
 
